2013-02-08  Anthony Green <green@moxielogic.com>

	* configure.ac: Move sparc asm config checks to within functions
	for compatibility with sun tools.
	* configure: Rebuilt.
	* src/sparc/ffi.c (ffi_prep_closure_loc): Flush cache on v9
	systems.
	* src/sparc/v8.S (ffi_flush_icache): Implement a sparc v9 cache
	flusher.

2013-02-08  Nathan Rossi <nathan.rossi@xilinx.com>

	* src/microblaze/ffi.c (ffi_closure_call_SYSV): Fix handling of
	small big-endian structures.
	(ffi_prep_args): Ditto.

2013-02-07  Anthony Green <green@moxielogic.com>

	* src/sparc/v8.S (ffi_call_v8): Fix typo from last patch
	(effectively hiding ffi_call_v8).

2013-02-07  Anthony Green <green@moxielogic.com>

	* configure.ac: Update bug reporting address.
	* configure.in: Rebuild.

	* src/sparc/v8.S (ffi_flush_icache): Out-of-line cache flusher for
	Sun compiler.
	* src/sparc/ffi.c (ffi_call): Remove warning.
	Call ffi_flush_icache for non-GCC builds.
	(ffi_prep_closure_loc): Use ffi_flush_icache.

	* Makefile.am (EXTRA_DIST): Add libtool-ldflags.
	* Makefile.in: Rebuilt.
	* libtool-ldflags: New file.

2013-02-07  Daniel Schepler <dschepler@gmail.com>

	* configure.ac: Correctly identify x32 systems as 64-bit.
	* m4/libtool.m4: Remove libtool expr error.
	* aclocal.m4, configure: Rebuilt.

2013-02-07  Anthony Green <green@moxielogic.com>

	* configure.ac: Fix GCC usage test.
	* configure: Rebuilt.
	* README: Mention LLVM/GCC x86_64 issue.
	* testsuite/Makefile.in: Rebuilt.

2013-02-07  Anthony Green <green@moxielogic.com>

	* testsuite/libffi.call/cls_double_va.c (main): Replace // style
	comments with /* */ for xlc compiler.
	* testsuite/libffi.call/stret_large.c (main): Ditto.
	* testsuite/libffi.call/stret_large2.c (main): Ditto.
	* testsuite/libffi.call/nested_struct1.c (main): Ditto.
	* testsuite/libffi.call/huge_struct.c (main): Ditto.
	* testsuite/libffi.call/float_va.c (main): Ditto.
	* testsuite/libffi.call/cls_struct_va1.c (main): Ditto.